tests/rosetta/out/Zig/aks-test-for-primes.error
zig build: exit status 1
/tmp/aks-test-for-primes.zig:59:9: error: variable of type 'comptime_int' must be const or comptime
/tmp/aks-test-for-primes.zig:59:9: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
